--- a/src/Jluct/BlogBundle/Resources/config/routing.yml
+++ b/src/Jluct/BlogBundle/Resources/config/routing.yml
@@ -1,3 +1,12 @@
 jluct_blog_homepage:
-    path:     /
-    defaults: { _controller: JluctBlogBundle:Default:index }
+    path:     /{page}
+    defaults: { _controller: JluctBlogBundle:Default:index, page: 1 }
+    requirements:
+        page: \d+
+
+jluct_blog_post:
+    path:     /post/{id}
+    defaults: { _controller: JluctBlogBundle:Default:post}
+    requirements:
+        id: \d+
+
