--- a/src/Jluct/BlogBundle/Resources/config/security.yml
+++ b/src/Jluct/BlogBundle/Resources/config/security.yml
@@ -1,7 +1,39 @@
 security:
+
     encoders:
         Jluct\BlogBundle\Entity\User: bcrypt
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
+        ROLE_ADMIN: [ROLE_USER]
+
+    providers:
+        database_users:
+            entity:
+                class: Jluct\BlogBundle\Entity\User
+                property: email
+
+    firewalls:
+        dev:
+            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            security: false
+
+        main:
+            pattern:  /.*
+            provider: database_users
+            form_login:
+                check_path: /login_check
+                login_path: /login
+                default_target_path: jluct_blog_homepage
+            anonymous: ~
+            security: true
+            logout:
+                path: jluct_blog_logout
+                target: jluct_blog_login
+
+    access_control:
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login_check, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/, roles: ROLE_USER }
+
